avoid clipping in sidebar contact lists, add ref imgs

--- a/styleguide/source/assets/scss/03-organisms/_contact-list.scss
+++ b/styleguide/source/assets/scss/03-organisms/_contact-list.scss
@@ -1,5 +1,11 @@
 .ma__contact-list {
-  overflow: auto;
+  &:not(.ma__contact-list--view-specific) {
+    overflow: auto;
+  }
+
+  .sidebar & {
+    overflow: initial;
+  }
 
   .pre-content > &,
   .post-content > &,
